examples/errors/func_ptr_non_func.cy
type mah_function = def (float) -> int;

fun bar(g: mah_function, a: int) {
    a(3.44)
}

fun main() {}

main()
